Corrected and supplemented

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </header>
       <section class="weather">
         <div class="weather-content">
-          <h1 class="city">Moscow</h1>
+          <h1 class="weather-content_city">Location</h1>
           <!-- <h2 class="weather-content__day">Day</h2>
           <h3 class="weather-content__time">00:00</h3> -->
           <h4 class="weather-content__temperature">0°</h4>
